--- a/sysContable-war/web/WEB-INF/web.xml
+++ b/sysContable-war/web/WEB-INF/web.xml
@@ -31,8 +31,12 @@
     <welcome-file-list>
         <welcome-file>login.xhtml</welcome-file>
     </welcome-file-list>
-      <servlet>
+    <servlet>
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>com.contabilidad.seg.login.LogoutServlet</servlet-class>
     </servlet>
+    <context-param>
+        <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+        <param-value>true</param-value>
+    </context-param>
 </web-app>
