--- a/sysContable-war/nbproject/project.properties
+++ b/sysContable-war/nbproject/project.properties
@@ -37,6 +37,18 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.ArialMSFont.jar=..\\lib\\iReport5.5.0\\ArialMSFont.jar
+file.reference.commons-beanutils-1.8.2.jar=..\\lib\\iReport5.5.0\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=..\\lib\\iReport5.5.0\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=..\\lib\\iReport5.5.0\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=..\\lib\\iReport5.5.0\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=..\\lib\\iReport5.5.0\\commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=..\\lib\\iReport5.5.0\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=..\\lib\\iReport5.5.0\\iText-2.1.7.js2.jar
+file.reference.jasperreports-5.5.0.jar=..\\lib\\iReport5.5.0\\jasperreports-5.5.0.jar
+file.reference.jasperreports-fonts-5.5.0.jar=..\\lib\\iReport5.5.0\\jasperreports-fonts-5.5.0.jar
+file.reference.png-encoder-1.5.jar=..\\lib\\iReport5.5.0\\png-encoder-1.5.jar
+file.reference.poi-3.7-20101029.jar=..\\lib\\iReport5.5.0\\poi-3.7-20101029.jar
 file.reference.primefaces-8.0.jar=..\\lib\\primefaces-8.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -53,7 +65,19 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.sysContable-ejb.dist}:\
-    ${file.reference.primefaces-8.0.jar}
+    ${file.reference.primefaces-8.0.jar}:\
+    ${file.reference.ArialMSFont.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.5.0.jar}:\
+    ${file.reference.jasperreports-fonts-5.5.0.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.7-20101029.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
