--- a/sysContable-war/web/WEB-INF/web.xml
+++ b/sysContable-war/web/WEB-INF/web.xml
@@ -6,9 +6,12 @@
     <!-- Configuración del tema PrimeFaces -->
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>nova-light</param-value>
+        <param-value>nova-dark</param-value>
     </context-param>
-    
+    <servlet>
+        <servlet-name>ImpRpts</servlet-name>
+        <servlet-class>recursos.ImpRpts</servlet-class>
+    </servlet>
     <!-- Mapeo de tipos MIME para fuentes -->
     <mime-mapping>
         <extension>ttf</extension>
