--- a/sysContable-war/nbproject/project.properties
+++ b/sysContable-war/nbproject/project.properties
@@ -45,7 +45,8 @@ file.reference.commons-javaflow-20060411.jar=..\\lib\\iReport5.5.0\\commons-java
 file.reference.commons-logging-1.1.jar=..\\lib\\iReport5.5.0\\commons-logging-1.1.jar
 file.reference.groovy-all-2.0.1.jar=..\\lib\\iReport5.5.0\\groovy-all-2.0.1.jar
 file.reference.iText-2.1.7.js2.jar=..\\lib\\iReport5.5.0\\iText-2.1.7.js2.jar
-file.reference.jasperreports-5.5.0.jar=..\\lib\\iReport5.5.0\\jasperreports-5.5.0.jar
+file.reference.jasperreports-5.5.0.jar=..\\lib\\jasperreports-5.5.0.jar
+file.reference.jasperreports-5.5.0.jar-1=..\\lib\\iReport5.5.0\\jasperreports-5.5.0.jar
 file.reference.jasperreports-fonts-5.5.0.jar=..\\lib\\iReport5.5.0\\jasperreports-fonts-5.5.0.jar
 file.reference.png-encoder-1.5.jar=..\\lib\\iReport5.5.0\\png-encoder-1.5.jar
 file.reference.poi-3.7-20101029.jar=..\\lib\\iReport5.5.0\\poi-3.7-20101029.jar
@@ -66,6 +67,7 @@ jar.compress=false
 javac.classpath=\
     ${reference.sysContable-ejb.dist}:\
     ${file.reference.primefaces-8.0.jar}:\
+    ${file.reference.jasperreports-5.5.0.jar}:\
     ${file.reference.ArialMSFont.jar}:\
     ${file.reference.commons-beanutils-1.8.2.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
@@ -74,7 +76,7 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.groovy-all-2.0.1.jar}:\
     ${file.reference.iText-2.1.7.js2.jar}:\
-    ${file.reference.jasperreports-5.5.0.jar}:\
+    ${file.reference.jasperreports-5.5.0.jar-1}:\
     ${file.reference.jasperreports-fonts-5.5.0.jar}:\
     ${file.reference.png-encoder-1.5.jar}:\
     ${file.reference.poi-3.7-20101029.jar}
